Updated copy on index.html

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col">
               <div class="centered">
-                <button type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Sign up for annoucements</a></button>
+                <button type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Sign up for announcements</a></button>
               </div>
             </div>
           </div>
