--- a/webroot/index.html
+++ b/webroot/index.html
@@ -116,21 +116,21 @@
                     <ul>
                       <li><h4>Talks and Papers</h4></li>
                        <li>Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space. </li>
+                        <a target="blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="blank">slides</a> (by Hamza Abusalah). </li>
                         <li data-l10n-id="james-talk">James Prestwich giving a 
                         <a target="blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
-                        <a target="blank" href="https://drive.google.com/file/d/16DFxhEF9VeQvtURmkPtOHZyhOAHyAMCW/view">slides</a>.</li>
+                        <a target="blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li>
                         <li>Ben Fisch giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
                       <li data-l10n-id="recent-talk">Bram Cohen's
                         <a target="blank" href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with
-                        <a target="blank" href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
+                        <a target="blank" href="https://view.publitas.com/chia-network/chia-1/">slides</a>.</li>
                       <li data-l10n-id="older-talk">Bram Cohen's
                         <a target="blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
                         <a target="blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
 
                          <li >Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://drive.google.com/file/d/0BwQpYqkQqA9cc0N4SlN2M05MS1RRRy1vZV9tZEE2VC1ZdUh3/view">slides</a>.</li>
+                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides</a>.</li>
 
                         <li >Bram Cohen giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
