Removed James Talk from website

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -116,9 +116,9 @@
                       <li><h4>Talks and Papers</h4></li>
                        <li>Bram Cohen giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="blank">slides</a> by Hamza Abusalah. </li>
-                        <li data-l10n-id="james-talk">James Prestwich giving a 
+                        <!--li data-l10n-id="james-talk">James Prestwich giving a 
                         <a target="blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
-                        <a target="blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li>
+                        <a target="blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li-->
                         <li>Ben Fisch giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
                       <li data-l10n-id="recent-talk">Bram Cohen's
