Include bram's github in learn more links

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -47,11 +47,35 @@
   <body class="layout">
     <div class="page js-page">
       <div id="main-wrapper">
-      <nav id="navbar_homepage" class="navbar navbar-light bg-faded ">
-              <a class="navbar-brand" href="/">
+      
+<nav id="navbar_homepage" class="navbar navbar-light bg-faded">
+        <a class="navbar-brand" href="/">
+          <img src="../images/chia-logo.svg" class="logo">
+        </a>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+           <a class="nav-link disabled" href="/news/index.html">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="/faq/index.html">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-primary btn-lg" ><a class="jobs_link" href="mailto:hello@chia.net">We're hiring!</a></button>
+          </li>
+        </ul>
+      </nav>
+      <!--nav id="navbar_homepage" class="navbar navbar-toggleable-md navbar-light bg-faded ">
+        <collapsebutton>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        </collapsebutton>
+              
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <a class="navbar-brand" href="/">
                 <img src="../images/chia-logo.svg" class="logo">
               </a>
-              <ul class="nav justify-content-end">
+              <ul class="nav navbar-nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link disabled" href="/news/index.html">News</a>
                 </li>
@@ -63,7 +87,10 @@
 
                 </li>
               </ul>
-            </nav>
+            </div>
+            </nav-->
+
+
       <div class="container-fluid" id="main-hero">
 
         <div class="container-fluid wrap" >
@@ -136,7 +163,7 @@
                         <a target="blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
 
                          <li >Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides</a>.</li>
+                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides </a>and <a target="blank" href="https://github.com/bramcohen/MerkleSet"> code</a>.</li>
 
                         <li >Bram Cohen giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
