Updated mobile nav and links to learn more

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -48,7 +48,7 @@
     <div class="page js-page">
       <div id="main-wrapper">
       
-<nav id="navbar_homepage" class="navbar navbar-light bg-faded">
+<!--nav id="navbar_homepage" class="navbar navbar-light bg-faded">
         <a class="navbar-brand" href="/">
           <img src="../images/chia-logo.svg" class="logo">
         </a>
@@ -63,8 +63,8 @@
             <button type="button" class="btn btn-primary btn-lg" ><a class="jobs_link" href="mailto:hello@chia.net">We're hiring!</a></button>
           </li>
         </ul>
-      </nav>
-      <!--nav id="navbar_homepage" class="navbar navbar-toggleable-md navbar-light bg-faded ">
+      </nav-->
+      <nav id="navbar_homepage" class="navbar navbar-expand-lg navbar-light bg-faded ">
         <collapsebutton>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
                 <a class="navbar-brand" href="/">
                 <img src="../images/chia-logo.svg" class="logo">
               </a>
-              <ul class="nav navbar-nav justify-content-end">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link disabled" href="/news/index.html">News</a>
                 </li>
@@ -88,7 +88,7 @@
                 </li>
               </ul>
             </div>
-            </nav-->
+            </nav>
 
 
       <div class="container-fluid" id="main-hero">
@@ -141,6 +141,10 @@
                   <p>
                     <ul>
                       <li><h4>Talks and Papers</h4></li>
+                      
+                       <li>Bram Cohen giving a
+                        <a target="blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
+
                        <li>Bram Cohen giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="blank">slides</a> by Hamza Abusalah. </li>
                         <!--li data-l10n-id="james-talk">James Prestwich giving a 
