--- a/webroot/index.html
+++ b/webroot/index.html
@@ -179,7 +179,7 @@
                 <div class="info-box">
                   <p>
                     <ul>
-                      <li><h4>News and Information</h4></li>
+                      <li data-l10n-id="news-and-info"><h4>News and Information</h4></li>
 
                        <li data-l10n-id="news-link">Follow the latest articles on the <a href="news/">News</a>page.</li>
                        <li data-l10n-id="faq-link">Visit our <a href="faq/">Frequently Asked Questions (FAQ)</a>to learn more!</li>
