Make navigation bar more responsive and consistent
Remove collapsable hamburger button from homepage.
Improve responsiveness for smaller screens.

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -41,11 +41,11 @@
   </head>
   <body class="layout" id="faq-page">
     <div class="page js-page">
-      <nav class="navbar navbar-light bg-faded">
+      <nav class="navbar navbar-light navbar-shadow bg-faded">
         <a class="navbar-brand" href="/">
           <img src="../images/chia-logo.svg" class="logo">
         </a>
-        <ul class="nav justify-content-end">
+        <ul class="nav">
           <li class="nav-item">
            <a class="nav-link disabled" href="/news/index.html">News</a>
           </li>
