Make home page images and columns responsive to screen width
Scale all images with screen size.
Split community columns for narrow resolutions.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -87,13 +87,13 @@
         <div class="container-fluid wrap" >
 
         <div class="row">
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <h1 data-l10n-id="slogan">Green money for a digital world</h1>
             <p data-l10n-id="mission" class="margin-top"> We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure. </p>
 
           </div>
-          <div class="col-7">
-            <img src="../images/main_illo.svg" alt="chia image">
+          <div class="col-xs-12 col-sm-6">
+            <img class="img-fluid" src="../images/main_illo.svg" alt="chia image">
           </div>
           </div>
         </div>
@@ -103,11 +103,11 @@
 
         <div class="wrap container-fluid" id="announcements">
           <div class="row">
-            <div class="col">
+            <div class="col-xs-12 col-sm-6">
               <h4 data-l10n-id="Ready to invest?">Ready to invest?</h4>
               <h2 data-l10n-id="sell-plan">Chia will be available to the public in the summer of 2018</h2>
             </div>
-            <div class="col">
+            <div class="col-xs-12 col-sm-6">
               <div class="centered">
                 <button type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Sign up for announcements</a></button>
               </div>
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col">
+              <div class="col-xs-12 col sm-6">
                 <div class="info-box">
                   <p>
                     <ul>
@@ -166,7 +166,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col">
+              <div class="col-xs-12 col-sm-6">
                 <div class="info-box">
                   <p>
                     <ul>
@@ -185,7 +185,7 @@
               <div class="row centered">
                 <div class="col">
                   <!-- Added area to make news logos as hyperlink -->
-                  <img src="../images/news-logos.png" usemap="#news_logs_map">
+                  <img class="img-fluid" src="../images/news-logos.png" usemap="#news_logs_map">
                   <map name="news_logs_map">
                     <area shape="rect" coords="0,0,55,50" href="./news/index.html#techcrunch" alt="Test">
                     <area shape="rect" coords="110,0,240,50" href="./news/index.html#fossybytes" alt="Test">
@@ -199,10 +199,10 @@
 
         <div class="wrap container-fluid" id="about">
           <div class="row">
-            <div class="col centered">
-                <img src="../images/second_illo.svg">
+            <div class="col-xs-12 col-sm-6 centered">
+                <img class="img-fluid" src="../images/second_illo.svg">
             </div>
-            <div class="col-7">
+            <div class="col-xs-12 col-sm-6">
                  <img src="../images/icon_about.svg">
                 <h2 data-l10n-id="About Chia">About Chia</h2>
                 <p data-l10n-id="about-detail"> Chia Network is a San Francisco-based company focused on improving crypto-currency infrastructure. Our CEO, Bram Cohen, famously invented BitTorrent: the first modern decentralized network protocol and one of the inspirations for the Bitcoin
@@ -214,8 +214,7 @@
 
         <div class="container-fluid" id="community">
           <div class="row">
-            <div class="special">
-              <div class="col-6">
+              <div class="col-xs-12 col-sm-6">
                 <div class="content">
                   <img src="../images/icon_finance.svg">
                   <h2 data-l10n-id="financial-instituations">Financial Institutions</h2>
@@ -225,8 +224,8 @@
                   </p>
                 </div>
               </div>
-              <div class="col-6">
-                <div class="content2">
+              <div class="col-xs-12 col-sm-6">
+                <div class="content">
                   <img src="../images/icon_community.png">
                   <h2 data-l10n-id="community">Community</h2>
                   <p data-l10n-id="join-keybase">Join our Keybase group to participate in discussion.</p>
@@ -239,11 +238,11 @@
                   </ul>
                   <p class="sub_link_p" data-l10n-id="join-announcement-list"> Join our
                   <a class="sub_link" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list to keep updated <div class="arrow-right"></div></a></p>
+                </div>
               </div>
-            </div>
-             </div>
-            </div>
           </div>
+        </div>
+</div>
 
 
       <a name="jobs"></a>
