--- a/webroot/index.html
+++ b/webroot/index.html
@@ -264,7 +264,7 @@
             </div>
             <div class="col-8">
               <p data-l10n-id="looking-to-hire"> We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being
-                in San Francisco is a plus. To apply, please complete a couple <a target="blank" href="https://leetcode.com/contest/">LeetCode</a> Contests and send a link to your LeetCode profile along with your resume to
+                in San Francisco is a plus. To apply, please complete a couple of <a target="blank" href="https://leetcode.com/contest/">LeetCode</a> Contests and send a link to your LeetCode profile along with your resume to
                 <a href="mailto:jobs@chia.net">jobs@chia.net</a>. </p>
             </div>
           </div>
