--- a/webroot/index.html
+++ b/webroot/index.html
@@ -87,12 +87,12 @@
         <div class="container-fluid wrap" >
 
         <div class="row">
-          <div class="col-xs-12 col-sm-6">
+          <div class="vertical-center col-xs-12 col-md-5">
             <h1 data-l10n-id="slogan">Green money for a digital world</h1>
             <p data-l10n-id="mission" class="margin-top"> We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure. </p>
 
           </div>
-          <div class="col-xs-12 col-sm-6">
+          <div class="vertical-center col-xs-12 col-md-7 centered">
             <img class="img-fluid" src="../images/main_illo.svg" alt="chia image">
           </div>
           </div>
@@ -103,13 +103,13 @@
 
         <div class="wrap container-fluid" id="announcements">
           <div class="row">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-xl-6">
               <h4 data-l10n-id="Ready to invest?">Ready to invest?</h4>
               <h2 data-l10n-id="sell-plan">Chia will be available to the public in the summer of 2018</h2>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-xl-6">
               <div class="centered">
-                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Sign up for announcements</a></button>
+                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg img-fluid" ><a class="button-link" target="blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Sign up for announcements</a></button>
               </div>
             </div>
           </div>
@@ -248,11 +248,11 @@
       <a name="jobs"></a>
         <div class="wrap container-fluid" id="jobs" >
           <div class="row">
-            <div class="col">
+            <div class="col-xs-12 col-sm-4 col-md-3 col-xl-2">
               <img src="../images/icon_work.svg">
               <h2 data-l10n-id="jobs">Work at Chia</h2>
             </div>
-            <div class="col-8">
+            <div class="col-xs-12 col-sm-8 col-md-9 col-xl-10">
               <p data-l10n-id="looking-to-hire"> We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being
                 in San Francisco is a plus. To apply, please complete a couple <a target="blank" href="https://leetcode.com/contest/">LeetCode</a> Contests and send a link to your LeetCode profile along with your resume to
                 <a href="mailto:jobs@chia.net">jobs@chia.net</a>. </p>
