--- a/webroot/index.html
+++ b/webroot/index.html
@@ -64,19 +64,44 @@
           </li>
         </ul>
       </nav-->
+<!--nav id="navbar_homepage" class="navbar navbar-expand-lg navbar-light bg-faded ">
+   <collapsebutton>
+   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+   </button>
+   </collapsebutton>
+
+         <div class="collapse navbar-collapse" id="navbarNav">
+           <a class="navbar-brand" href="/">
+           <img src="../images/chia-logo.svg" class="logo">
+         </a>
+         <ul class="navbar-nav ml-auto">
+           <li class="nav-item">
+             <a data-l10n-id="news" class="nav-link disabled" href="/news/index.html">News</a>
+           </li>
+           <li class="nav-item">
+             <a data-l10n-id="faq" class="nav-link disabled" href="/faq/index.html">FAQ</a>
+           </li>
+           <li class="nav-item">
+             <button type="button" class="btn btn-primary btn-lg" ><a data-l10n-id="hiring" class="jobs_link" href="#jobs">We're hiring!</a></button>
+
+           </li>
+         </ul>
+       </div>
+       </nav-->
       <nav id="navbar-homepage" class="navbar navbar-light bg-faded">
         <a class="navbar-brand" href="/">
           <img src="../images/chia-logo.svg" class="logo">
         </a>
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link disabled" href="/news/index.html" data-l10n-id="news">News</a>
+            <a data-l10n-id="news" class="nav-link disabled" href="/news/index.html" data-l10n-id="news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="/faq/index.html">FAQ</a>
+            <a data-l10n-id="faq" class="nav-link disabled" href="/faq/index.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn btn-primary btn-lg" ><a class="jobs_link" href="mailto:hello@chia.net" data-l10n-id="hiring">We're hiring!</a></button>
+            <button type="button" class="btn btn-primary btn-lg" ><a data-l10n-id="hiring" class="jobs_link" href="mailto:hello@chia.net" data-l10n-id="hiring">We're hiring!</a></button>
           </li>
         </ul>
       </nav>
@@ -104,7 +129,7 @@
         <div class="wrap container-fluid" id="announcements">
           <div class="row">
             <div class="col-xs-12 col-xl-6">
-              <h4 data-l10n-id="Ready to invest?">Ready to invest?</h4>
+              <h4 data-l10n-id="ready-to-invest">Ready to invest?</h4>
               <h2 data-l10n-id="sell-plan">Chia will be available to the public in the summer of 2018</h2>
             </div>
             <div class="col-xs-12 col-xl-6">
