--- a/webroot/index.html
+++ b/webroot/index.html
@@ -166,10 +166,10 @@
                         <a target="blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
                         <a target="blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
 
-                         <li data-l10n-id="scaling-bitcoin">Bram Cohen giving a
+                         <li >Bram Cohen giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides </a>and<a target="blank" href="https://github.com/bramcohen/MerkleSet"> code</a>.</li>
 
-                        <li data-l10n-id="waste-talk">Bram Cohen giving a
+                        <li >Bram Cohen giving a
                         <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
                     </ul>
                   </p>
