Updated background color on FAQ page

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
       </header-->
-
+<div id="bodyfaq">
       <div id="markdown-container" class="wrap container-fluid" >        
          <div class="row">
             <div class="col">
@@ -248,7 +248,7 @@
           </div>
         </div-->
       </div>
-
+</div>
       <footer class="hero page-footer">
         <div class="wrap container-fluid">
           <div class="row">
