--- a/webroot/index.html
+++ b/webroot/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="col-sm-6">
               <div class="centered">
-                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button>
+                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="__blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button>
               </div>
             </div>
         </div>
@@ -144,18 +144,18 @@
                       <li data-l10n-id="talks-and-papers"><h4>Talks and Papers</h4></li>
 
                        <li>Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
+                        <a target="__blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
 
                        <li data-l10n-id="bpase-2018-first">Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="blank">slides</a> by Hamza Abusalah. </li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="_blank">slides</a> by Hamza Abusalah. </li>
                         <!--li data-l10n-id="james-talk">James Prestwich giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
-                        <a target="blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li-->
+                        <a target="_blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
+                        <a target="_blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li-->
                         <li data-l10n-id="bpase-2018-second">Ben Fisch giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
                       <li data-l10n-id="recent-talk">Bram Cohen's
-                        <a target="blank" href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with
-                        <a target="blank" href="https://view.publitas.com/chia-network/chia-1/">slides</a>.</li>
+                        <a target="_blank" href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with
+                        <a target="_blank" href="https://view.publitas.com/chia-network/chia-1/">slides</a>.</li>
                       <li data-l10n-id="older-talk">Bram Cohen's
 
                         <!-- Updated for conflict "#115: #112 : Link to articles for news logo on homepage" -->
@@ -164,14 +164,14 @@
                         <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
                         -->
 
-                        <a target="blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
-                        <a target="blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
+                        <a target="_blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
 
                          <li >Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides </a>and<a target="blank" href="https://github.com/bramcohen/MerkleSet"> code</a>.</li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="_blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides </a>and<a target="_blank" href="https://github.com/bramcohen/MerkleSet"> code</a>.</li>
 
                         <li >Bram Cohen giving a
-                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
                     </ul>
                   </p>
                 </div>
@@ -266,7 +266,7 @@
             </div>
             <div class="col-sm-8">
               <p data-l10n-id="looking-to-hire"> We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being
-                in San Francisco is a plus. To apply, please complete a couple <a target="blank" href="https://leetcode.com/contest/">LeetCode</a> Contests and send a link to your LeetCode profile along with your resume to
+                in San Francisco is a plus. To apply, please complete a couple <a target="_blank" href="https://leetcode.com/contest/">LeetCode</a> Contests and send a link to your LeetCode profile along with your resume to
                 <a href="mailto:jobs@chia.net">jobs@chia.net</a>. </p>
             </div>
           </div>
@@ -338,17 +338,17 @@
                     <p class="header" data-l10n-id="footer-find-us"> Find us </p>
                   </li>
                   <li class="social_footer">
-                    <a href="https://www.facebook.com/Chia-Net-324129071326652/" target="blank">
+                    <a href="https://www.facebook.com/Chia-Net-324129071326652/" target="_blank">
                         <img src="/images/soc_fb.svg" title="Facebook" >
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://twitter.com/ChiaNetworkInc" target="blank">
+                    <a href="https://twitter.com/ChiaNetworkInc" target="_blank">
                         <img src="/images/soc_tw.svg" title="Twitter" >
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://github.com/Chia-Network/website" target="blank">
+                    <a href="https://github.com/Chia-Network/website" target="_blank">
                         <img src="/images/github.svg" title="GitHub" >
                     </a>
                   </li>
