--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -277,17 +277,17 @@
                     <p class="header" data-l10n-id="footer-find-us"> Find us </p>
                   </li>
                   <li class="social_footer">
-                    <a href="https://www.facebook.com/Chia-Net-324129071326652/" target="blank">
+                    <a href="https://www.facebook.com/Chia-Net-324129071326652/" target="_blank">
                         <img src="/images/soc_fb.svg" title="Facebook" >
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://twitter.com/ChiaNetworkInc" target="blank">
+                    <a href="https://twitter.com/ChiaNetworkInc" target="_blank">
                         <img src="/images/soc_tw.svg" title="Twitter" >
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://github.com/Chia-Network/website" target="blank">
+                    <a href="https://github.com/Chia-Network/website" target="_blank">
                         <img src="/images/github.svg" title="GitHub" >
                     </a>
                   </li>
