Updated __blank to _blank

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -119,7 +119,9 @@
             </div>
             <div class="col-sm-6">
               <div class="centered">
-                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="__blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button>
+                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="_blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button>
+                
+
               </div>
             </div>
         </div>
@@ -144,7 +146,7 @@
                       <li data-l10n-id="talks-and-papers"><h4>Talks and Papers</h4></li>
 
                        <li>Bram Cohen giving a
-                        <a target="__blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
 
                        <li data-l10n-id="bpase-2018-first">Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="_blank">slides</a> by Hamza Abusalah. </li>
