Updated buttons & links

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -64,7 +64,7 @@
                   <a data-l10n-id="faq" class="nav-link disabled" href="/faq/index.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <button type="button" class="btn btn-primary btn-lg" ><a data-l10n-id="hiring" class="jobs_link" href="#jobs">We're hiring!</a></button>
+                  <a data-l10n-id="hiring" class="jobs_link btn btn-primary btn-lg" role="button" href="mailto:hello@chia.net">We're hiring!</a>
 
                 </li>
               </ul>
