--- a/webroot/index.html
+++ b/webroot/index.html
@@ -84,8 +84,7 @@
                   <a data-l10n-id="faq" class="nav-link disabled" href="/faq/index.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <button type="button" class="btn btn-primary btn-lg" ><a data-l10n-id="hiring" class="jobs_link" href="#jobs">We're hiring!</a></button>
-
+                  <a data-l10n-id="hiring" class="jobs_link btn btn-primary btn-lg" role="button" href="#jobs">We're hiring!</a>
                 </li>
               </ul>
             </div>
@@ -119,8 +118,8 @@
             </div>
             <div class="col-sm-6">
               <div class="centered">
-                <button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="_blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button>
-                
+                <!--button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="_blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button-->
+                <a class="btn btn-primary btn-lg button-link" role="button" target="_blank" aria-disabled="true" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a>
 
               </div>
             </div>
@@ -149,7 +148,7 @@
                         <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
 
                        <li data-l10n-id="bpase-2018-first">Bram Cohen giving a
-                        <a target="_blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="_blank">slides</a> by Hamza Abusalah. </li>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a target="_blank" href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="_blank">slides</a> by Hamza Abusalah. </li>
                         <!--li data-l10n-id="james-talk">James Prestwich giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
                         <a target="_blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li-->
@@ -251,7 +250,7 @@
                       </li>
                   </ul>
                   <p class="sub_link_p" data-l10n-id="join-announcement-list"> Join our
-                  <a class="sub_link" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list to keep updated <div class="arrow-right"></div></a></p>
+                  <a class="sub_link" target="_blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list to keep updated <div class="arrow-right"></div></a></p>
               </div>
             </div>
              </div>
