Include translation on subscribe button

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -119,7 +119,7 @@
             <div class="col-sm-6">
               <div class="centered">
                 <!--button data-l10n-id="subscribe" type="button" class="btn btn-primary btn-lg" ><a class="button-link" target="_blank" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a></button-->
-                <a class="btn btn-primary btn-lg button-link" role="button" target="_blank" aria-disabled="true" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a>
+                <a data-l10n-id="subscribe" class="btn btn-primary btn-lg button-link" role="button" target="_blank" aria-disabled="true" href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Subscribe to announcements</a>
 
               </div>
             </div>
