--- a/webroot/team/index.html
+++ b/webroot/team/index.html
@@ -11,7 +11,7 @@
     <!--/GoogleAnalytics-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chia.net</title>
+    <title data-l10n-id="team-tab">Team - Chia Network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" href="/css/style.css?v4" type="text/css">
